--- a/src/global.css
+++ b/src/global.css
@@ -4,9 +4,9 @@ html {
     margin-right: auto;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
     html {
-        width: 98%;
+        max-width: 98%;
     }
 }
 
@@ -16,6 +16,11 @@ body {
 
 h1 {
     text-align: center;
+}
+
+h2 {
+    padding-top: 20px;
+    border-top: rgba(128, 128, 128, 0.5) 1px solid;
 }
 
 .roadwork {
@@ -115,8 +120,7 @@ h1 {
 
 /* Notification Banner Styles */
 .notification-banner {
-    width: calc(100% - 20px); /* Ensure it fits within the screen */
-    max-width: 95%; /* Prevent overflow on small screens */
+    max-width: 90%;
     padding: 10px 20px;
     font-size: 16px;
     text-align: center;
@@ -156,6 +160,7 @@ h1 {
     color: inherit;
     padding: 0;
 }
+
 .notification-banner .close-btn:hover {
     opacity: 0.7;
 }
