--- a/src/global.css
+++ b/src/global.css
@@ -112,6 +112,11 @@ h2 {
     margin-top: 0;
 }
 
+.roadwork p {
+    margin-block-start: 0.2em;
+    margin-block-end: 0.4em;
+}
+
 .severity {
     font-weight: bold;
     color: white;
